--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ index.html
             <p>
                 <!-- 联系方式，可根据实际情况修改 -->
                  <h3>详情如下</h3>
-                 <a href="https://cyr-david.github.io/HTML/团队成员/陈昱融.html"><h3>队长</h3></a>
-                 <a href="https://cyr-david.github.io/HTML/团队成员/许娱恺.html"><h3>掌权</h3></a>
-                 <a href="https://cyr-david.github.io/HTML/团队成员/蒋泽麟.html"><h3>摸鱼</h3></a>
+                 <a href="https://cyr-david.github.io/HTML/联系方式/陈昱融.html"><h3>队长</h3></a>
+                 <a href="https://cyr-david.github.io/HTML/联系方式/许娱恺.html"><h3>掌权</h3></a>
+                 <a href="https://cyr-david.github.io/HTML/联系方式/蒋泽麟.html"><h3>摸鱼</h3></a>
             </p>
         </section>
     </main>
