--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ index.html
     <!-- 响应式设计，适配移动端 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 网页标题 -->
-    <title>CG工作室</title>
+    <title>CXJ工作室</title>
     <!-- 引入外部CSS样式表 -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 网站头部，包含标题和导航栏 -->
     <header>
-        <h1>CG团队</h1>
+        <h1>CXJ团队</h1>
         <nav>
             <!-- 导航链接，可根据需要添加更多 -->
             <a href="#about">关于我们</a>
@@ -33,7 +33,7 @@ index.html
             <h2>关于我们</h2>
             <p>
                 <!-- 简要介绍工作室 -->
-                CG团队是2024年2月21日成建的一个小团队,由原2025届六(2)班5号、16号、43号成立。
+                CXJ团队是2024年2月21日成建的一个小团队,由原2025届六(2)班5号、16号、43号成立。
             </p>
         </section>
 
@@ -74,7 +74,7 @@ index.html
     </main>
     <!-- 页脚信息 -->
     <footer>
-        &copy; 2025 CG团队 保留所有权利
+        &copy; 2025 CXJ团队 保留所有权利
     </footer>
 </body>
 </html>
